--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <img src="images/img_chania.jpg" alt="Flower">
       <div class="carousel-caption">
         <h3>Flowers</h3>
-        <p>Beatiful flowers in Kolymbarium, Crete.</p>
+        <p>Beatiful flowers in Kolymbari, Cretes.</p>
       </div>
     </div>
 
